# phoenix_core

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  bitbucket-pipelines.yml
scripts/: hidenames.sh
src/: algebra_select_mixin.hpp  algebras.cc  algebras.hpp  conv2d.hpp  debug_utils.cc  debug_utils.hpp  deferred_allocator.hpp  dense.hpp  isolated_thread.cc  isolated_thread.hpp  operation.hpp  thread_local_ptr.hpp  upstride.hpp  utils.cc  utils.hpp
src/backend/: api.h  backend.cc  backend.hpp  conv2d_descriptor.hpp  dense_descriptor.hpp  device.hpp  memory_request.cc  memory_request.hpp  op_collections.cc  op_collections.hpp  operation.hpp  operations_cache.hpp  temporary_tensor.hpp  tensor.hpp  types.hpp
src/backend/cudnn/: context.hpp  conv2d.hpp  conv2d_algo_select.cc  conv2d_algo_select.hpp  cudnn.cc  dense.hpp  device.cc  device.hpp  half.hpp  kernels.cc  kernels.cu  kernels.hpp  kernels_quat.cu  kernels_utils.cc  kernels_utils.hpp  quat_pointwise_conv2d.cc  quat_pointwise_conv2d.cu  quat_pointwise_conv2d.hpp  tensor.hpp
src/backend/onednn/: context.hpp  conv2d.hpp  dense.hpp  device.hpp  onednn.cc  tensor.cc  tensor.hpp
src/cudnn/: context.hpp  conv2d.hpp  cudnn.cc  cudnn.hpp  kernels.cu  kernels.hpp
src/onednn/: context.hpp  conv2d.cc  conv2d.hpp  onednn.cc  onednn.hpp
tests/: tests.cpp
